# Transformer-DIA

./: MANIFEST.in  README.md  environment.yml  pyproject.toml
data_utils/: annotate_mgfs.py  feature_extractor.py
depthcharge/components/: transformers.py
depthcharge/data/: dia_config.py  dia_io.py
transformer_dia/: config.yaml  transformer_dia.py  version.py
transformer_dia/data/: ms_io.py
transformer_dia/denovo/: model.py  model_runner.py
