[build-system]
requires = ["setuptools>=61", "wheel", "setuptools_scm[toml]>=3.4"]
build-backend = "setuptools.build_meta"

[project]
name = "transdia"
version = "0.0.7"
authors = [
  { name="Shiva Ebrahimi", email="shivaebrahimi@my.unt.edu" },
]
description = "Transformer-based de novo peptide sequencing for data-independent acquisition mass spectrometry"
readme = "README.md"
license = {text = "Apache 2.0"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "lightning>=2.0,<2.1",
    "pytorch-lightning>=1.9,<2.0",
    "pyteomics>=4.6",
    "torch>=2.0,<2.1",
    "numpy<2.0",
    "numba>=0.48.0",
    "lxml>=4.9.1",
    "h5py>=3.12.1",
    "einops>=0.4.1",
    "tqdm>=4.65.0",
    "lark>=1.1.4",
    "selfies>=2.1.1",
    "sortedcontainers>=2.4.0",
    "dill>=0.3.6",
    "rdkit>=2023.03.1",
    "pillow>=9.4.0",
    "spectrum-utils>=0.4.1",
    "tensorboard",
    "psutil>=6.1.0",
    "requests>=2.32.3",
    "pandas>=2.0.2"

]

[project.urls]
Homepage = "https://github.com/Biocomputing-Research-Group/Transformer-DIA"

[project.scripts]
transdia = "transformer_dia.transformer_dia:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"transformer_dia" = ["config.yaml"]


[tool.setuptools.packages.find]
exclude = ["data"]
